# c2rust

./: .gitignore  .gitmodules  Cargo.toml  README.en.md  README.md  Reslove-Imports设计文档.md  Resolve-lifetimes设计文档.md  build.py  config.toml  pyproject.toml  run.py
better/: Cargo.toml  curl-rust-run.sh  json-c-run.sh  json-c-rust.py  libc2rust_lib.rlib  liblib.rlib  libxml2-run.sh  libxml2-rust1.py  libxml2-rust2.py  run.py  run.sh  rustfmt.toml
better/after-resolve-imports/jsonc_rust/src/: arraylist.rs  debug.rs  json_c_version.rs  json_object.rs  json_object_iterator.rs  json_pointer.rs  json_tokener.rs  json_util.rs  json_visit.rs  linkhash.rs  printbuf.rs  random_seed.rs
better/after-resolve-lifetimes/jsonc_rust/src/: arraylist.rs  debug.rs  json_object.rs  json_object_iterator.rs  json_tokener.rs  json_visit.rs  linkhash.rs  random_seed.rs
better/after-resolve-lifetimes/libxml2_rust/: lib.rs
better/result/curl-rust/: lib.rs
better/result/jsonc_rust/: lib.rs
better/result/libxml2_rust/: lib.rs
better/rewrite-invocations/: jsonc_rust  libxml2_rust  rust_v2021
better/rewrite-workspace/libxml2_rust/: lib.rs
better/rewrite-workspace/rust_v2021/: Cargo.toml  lib.rs
better/src/: analysis.rs  compiler_interface.rs  config.rs  constants.rs  io.rs  lib.rs  ptr_provenance.rs  solver.rs  types.rs  util.rs
better/src/analysis/: commons.rs  span.rs
better/src/compiler_interface/: error_handling.rs
better/src/solver/: equality_based.rs  set_based.rs
better/test-inputs/jsonc_rust/: Cargo.toml  lib.rs
better/test-inputs/libxml2_rust/: Cargo.toml  lib.rs
better/test-inputs/rust_v2021/: Cargo.toml
examples/curl/: README.md  translate.sh
examples/garbc/: README.md
examples/genann/: README.md
examples/jsonc/: README.md
examples/libass/: README.md
examples/libxml2/: README.md
examples/urlparser/: README.md
safe-analyzer/: Cargo.toml
safe-analyzer/src/: main.rs
scripts/: patch_c2rust_results.py  patch_compile_commands.py  patch_unsafe_fix.py  pre_resolve_imports.py  pre_resolve_lifetime.py  pre_unsafe_fix.py  utils.py
src/: lib.rs  ptr_provenance.rs
src/compiler_interface/: error_handling.rs
unsafe-ana/src/: main.rs
(+652 files in other folders)
